<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".MainActivity">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_centerInParent="true"
    >
    <ImageView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:src="@drawable/logo_edulink"/>

    <TextView
        android:id="@+id/txtSlogan"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:text="@string/slogan"
        android:textColor="@android:color/white"
        android:layout_gravity="center"/>
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:weightSum="2">

    <info.hoang8f.widget.FButton
        android:id="@+id/btnSignIn"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="10dp"
        android:layout_margin="8dp"
        android:textColor="@android:color/white"
        android:text="@string/btnSignIn"
        app:buttonColor="@color/btnSignIn"/>

    <info.hoang8f.widget.FButton
        android:id="@+id/btnSignUp"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="50dp"
        android:layout_margin="8dp"
        android:background="@color/btnSignUp"
        android:text="@string/btnSignUp"
        android:textColor="@android:color/white"
        app:buttonColor="@color/btnSignUp"/>

    </LinearLayout>


</RelativeLayout>